# Mancala_Game

./: CMakeLists.txt  Mancala.pptx
include/core/: Board.h  BoardConstants.h  Pit.h  Player.h  ScoreTracker.h  Settings.h
include/engine/: GameEngine.h
include/states/: AIAlgorithmStrategy.h  CommandCodes.h  GameOverState.h  GameStateManager.h  GameplayState.h  MainMenuState.h  PauseState.h  SettingsState.h  State.h
include/strategy/: AIAlgorithmStrategy.h  AlgorithmConstants.h  HumanInputStrategy.h  PlayerStrategy.h
include/ui/: Constants.h  UI.h
src/: main.cpp
src/core/: Board.cpp  Player.cpp
src/engine/: GameEngine.cpp
src/states/: GameOverState.cpp  GameStateManager.cpp  GameplayState.cpp  MainMenuState.cpp  PauseState.cpp  SettingsState.cpp
src/ui/: UI.cpp
